# lambda-durable-execution-rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  README.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-llm-client/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  deferred-items.md
.planning/phases/02-configuration-and-mcp-integration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-agent-loop/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-observability/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md
.planning/phases/05-deployment-and-validation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md
.planning/phases/06-pmcp-sdk-example/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-VALIDATION.md  06-VERIFICATION.md
.planning/phases/07-pmcp-run-agents-tab/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
examples/: .samignore  Cargo.toml  README.md  samconfig.toml  template-agent.yaml  template.yaml
examples/diagrams/: block_example.md  block_example.mermaid  callback_example.md  callback_example.mermaid  child_context.md  child_context.mermaid  hello_world.md  hello_world.mermaid  invoke_caller.md  invoke_caller.mermaid  invoke_target.md  invoke_target.mermaid  map_operations.md  map_operations.mermaid  map_with_custom_serdes.md  map_with_custom_serdes.mermaid  map_with_failure_tolerance.md  map_with_failure_tolerance.mermaid  parallel.md  parallel.mermaid  parallel_first_successful.md  parallel_first_successful.mermaid  step_retry.md  step_retry.mermaid  wait_for_callback_heartbeat.md  wait_for_callback_heartbeat.mermaid  wait_for_callback_multiple_invocations.md  wait_for_callback_multiple_invocations.mermaid  wait_for_condition.md  wait_for_condition.mermaid
examples/scripts/: validate.py  validate_agent.py
src/: lib.rs
src/checkpoint/: manager.rs  mod.rs
src/checkpoint/manager/: coalesce.rs  hash.rs  lifecycle.rs  queue.rs
src/context/: durable_context.rs  durable_context_tests.rs  execution_context.rs  mod.rs  step_context.rs
src/context/durable_context/: batch.rs  callback.rs  child.rs  internal.rs  invoke.rs  map.rs  mod.rs  parallel.rs  serdes.rs  step.rs  tests.rs  wait.rs  wait_condition.rs
src/context/durable_context/callback/: execute.rs  replay.rs
src/context/durable_context/child/: execute.rs  replay.rs
src/context/durable_context/invoke/: execute.rs  replay.rs
src/context/durable_context/map/: execute.rs  replay.rs
src/context/durable_context/parallel/: execute.rs  replay.rs
src/context/durable_context/step/: execute.rs  replay.rs
src/context/durable_context/tests/: callback.rs  child.rs  helpers.rs  invoke.rs  map.rs  mod.rs  operations.rs  parallel.rs  step.rs  wait.rs  wait_condition.rs
src/context/durable_context/wait/: execute.rs
src/error/: mod.rs  types.rs
src/retry/: mod.rs  presets.rs  strategy.rs
src/runtime/: handler.rs  mod.rs
src/runtime/handler/: execute.rs
src/termination/: manager.rs  mod.rs
src/types/: batch.rs  batch_serdes.rs  config.rs  duration.rs  invocation.rs  lambda_service.rs  logger.rs  mod.rs  serdes.rs
src/types/config/: callback.rs  child.rs  completion.rs  durable_execution.rs  invoke.rs  map.rs  mod.rs  parallel.rs  step.rs  tests.rs  wait_condition.rs
(+2 files in other folders)
